--- a/hw_02.ipynb
+++ b/hw_02.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3a80d298",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-23T19:11:09.858304500Z",
-     "start_time": "2023-10-23T19:11:09.826856800Z"
+     "end_time": "2023-10-23T19:13:04.064120700Z",
+     "start_time": "2023-10-23T19:13:04.052597500Z"
     }
    },
    "outputs": [],
@@ -322,7 +322,7 @@
    "source": [
     "values = task3_data()\n",
     "\n",
-    "# Исходя из материала лекции, для проверки распределения величины на нормальность можно использовать критерий Шапиро-Уилк. В этом случае гипотезы выглядят следущим образом:\n",
+    "# Исходя из материала лекции, для проверки распределения величины на нормальность можно использовать критерий Шапиро-Уилк. В этом случае гипотезы выглядят следующим образом:\n",
     "# H0 - величина имеет нормальное распределение\n",
     "# H1 - величина не имеет нормального распределения\n",
     "# alpha = 0.05\n",
@@ -412,7 +412,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample1, sample2 = task4_part1()"
+    "sample1, sample2 = task4_part1()\n",
+    "\n",
+    "# Исходя из материала лекции в случае с ttest гипотезы выглядят следующим образом:\n",
+    "# H0 - различий между значениями нет\n",
+    "# H1 - различия есть\n",
+    "# alpha = 0.05\n",
+    "# решающее правило: если p_value < alpha, то есть основания отбросить H0 (т.е. считать, что отличия есть / тест прокрасился)\n",
+    "\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "plt.figure(figsize=(15, 5))\n",
+    "plt.plot()\n",
+    "sns.kdeplot(sample1)\n",
+    "sns.kdeplot(sample2)"
    ]
   },
   {
@@ -421,7 +434,9 @@
    "id": "0a649a59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "stat, p_value = ttest_ind(sample1, sample2)"
+   ]
   },
   {
    "cell_type": "markdown",
