--- a/hw_02.ipynb
+++ b/hw_02.ipynb
@@ -6,8 +6,8 @@
    "id": "3a80d298",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-23T19:13:04.064120700Z",
-     "start_time": "2023-10-23T19:13:04.052597500Z"
+     "end_time": "2023-10-23T19:26:37.163385200Z",
+     "start_time": "2023-10-23T19:26:37.110729300Z"
     }
    },
    "outputs": [],
@@ -501,13 +501,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "30e69f8f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-24T08:24:57.289700800Z",
+     "start_time": "2023-10-24T08:24:57.289194600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_value: 0.38869326976390334\n",
+      "Игральная кость идеально симметрично\n"
+     ]
+    }
+   ],
    "source": [
-    "... # Ваш код тут"
+    "# Тест chisquare позволяет сравнить два набора частота реализации фиксированного числа событий (например, выпадения 1-й грани игральной кости, 2-й, 3-й и т.д. до 6й)\n",
+    "# и сделать вывод о том, совпадении или различии этих частот. С помощью этого теста мы можем сравнить фактические частоты выпадение граней игральной кости с ожидаемыми \n",
+    "# частотами для идеально симметричной игральной кости\n",
+    "\n",
+    "# В этом случае гипотезы формулируются таким образом:\n",
+    "# H0 - частоты одинаковы (различий нет)\n",
+    "# H1 - частоты отличаются (различия есть)\n",
+    "alpha = 0.05\n",
+    "# решающее правило: если p_value < alpha, то есть основания отбросить H0 (т.е. считать, что частоты отличаются)\n",
+    "\n",
+    "# поскольку частоты выпадания граней идеально симметричной кости должны быть равны, то соответствующая случайная величина имеет равномерное распределение\n",
+    "# в этом случае набор ее ожидаемых значений можно не передавать в chisquare, т.к. по умолчанию эта функция как раз сравнивает переданные частоты с частотами \n",
+    "# равномерной сл.величины\n",
+    "\n",
+    "from scipy.stats import chisquare\n",
+    "stat, p_value = chisquare(np.array([150,153,166,170,183,178]))\n",
+    "print(\"p_value:\", p_value)\n",
+    "print(\"Игральная кость не является идеально симметричной\" if p_value< alpha else \"Игральная кость идеально симметрична\" )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_value: 7.851636455899903e-06\n",
+      "Игральная кость не является идеально симметричной\n"
+     ]
+    }
+   ],
+   "source": [
+    "# для того, чтобы получить обратный результат теста, нужно взять более отличающиеся частоты выпадания граней\n",
+    "stat, p_value = chisquare(np.array([140,143,156,160,173,228]))\n",
+    "print(\"p_value:\", p_value)\n",
+    "print(\"Игральная кость не является идеально симметричной\" if p_value< alpha else \"Игральная кость идеально симметрична\" )"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-24T08:25:58.890432Z",
+     "start_time": "2023-10-24T08:25:58.851001100Z"
+    }
+   },
+   "id": "248952dbd025ed50"
   },
   {
    "cell_type": "markdown",
